
Thu Sep 5 20:36:27 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* Binder.cs: finished the Binder class and implemented the default
	binder.

2002-09-03  Martin Baulig  <martin@gnome.org>

	* Assembly.cs (Assembly.Location): Implemented.

2002-08-29  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* MonoField.cs:
	(GetValue): allow obj to be null (used for static fields).

2002-08-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* MonoField.cs: GetValue renamed to GetValueInternal. Added check for
	null.

Wed Aug 21 13:03:25 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* Assembly.cs: GetEntryAssembly patch by Tomi Pakarinen 
	<tomi.pakarinen@welho.com>.

2002-08-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Assembly.cs: FullName now returns a proper string instead of
	something like 'file://...'.

	* AssemblyName.cs: added missing ToString method.

2002-08-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* FieldInfo.cs: implemented SetValue.

Wed Aug 14 17:37:30 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* MonoEvent.cs, MonoMethod.cs: implemented ReflectedType.

2002-08-14  Dick Porter  <dick@ximian.com>

	* Assembly.cs: Stub out GetSatelliteAssembly

2002-08-12  Tim Coleman <tim@timcoleman.com>
	* MonoProperty.cs:
		Allow multiple parameters for GetValue ()

Thu Aug 8 13:05:44 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* Assembly.cs: implemented GetFile() and GetFiles().

Mon Aug 5 21:19:41 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* Assembly.cs: implemented EntryPoint and a few 
	resource related methods.

Wed Jul 24 13:08:56 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* MethodBase.cs: implemented GetCurrentMethod.
	* Assembly.cs: implemented GetExecutingAssembly and
	GetCallingassembly.

Mon Jul 1 18:01:49 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* MonoProperty.cs: handle properties with only a set method.

2002-05-24  Martin Baulig  <martin@gnome.org>

	* ParameterInfo.cs: Added internal constructor.
